// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaReview is rendered correctly TextareaReview is rendered correctly with disabled input 1`] = `
<textarea
  className="reviews__textarea form__textarea"
  disabled="disabled"
  id="review"
  name="review"
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="Tell how was your stay, what you like and what can be improved"
  value="123"
/>
`;

exports[`TextareaReview is rendered correctly TextareaReview is rendered correctly without disabled input 1`] = `
<textarea
  className="reviews__textarea form__textarea"
  disabled=""
  id="review"
  name="review"
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="Tell how was your stay, what you like and what can be improved"
  value="123"
/>
`;
